Use sealed classes